# exokern_eval

./: .gitignore  README.md  pyproject.toml
src/exokern_eval/: __init__.py  baselines.py  cli.py  evaluator.py  loader.py  report.py
tests/: test_baselines.py  test_cli.py  test_report.py
